--- a/params/shapemaker_vhcc_run3/Znn.yaml
+++ b/params/shapemaker_vhcc_run3/Znn.yaml
@@ -19,24 +19,25 @@ categories:
     observable: "GNN"
     mata_name: "Znn_SR"
   CR_Znn_2J_HF:
-    observable: "dijet_pt"
+    observable: "dijet_CvsL_j1"
     mata_name: "Znn_CR_HF"
   CR_Znn_2J_LF:
-    observable: "dijet_pt"
+    observable: "dijet_CvsL_j1"
     mata_name: "Znn_CR_LF"
   CR_Znn_2J_CC:
-    observable: "dijet_pt"
+    observable: "dijet_CvsL_j1"
     mata_name: "Znn_CR_CC"
   CR_Znn_4J_TT:
-    observable: "dijet_pt"
+    observable: "dijet_CvsL_j1"
     mata_name: "Znn_CR_TT"
 
 sample_to_process_map:
   DATA_MET: "data_obs"
   ZH_Hto2C_Zto2Nu: "ZH_hcc"
   ZH_Hto2B_Zto2Nu: "ZH_hbb"
-  TTTo2L2Nu: "TT"
-  TTToHadrons: "TT"
+  TTTo2L2Nu: "TT_2L"
+  TTToSemiLeptonic: "TT_1L"
+  TTToHadrons: "TT_Had"
   ZJetsToNuNu_NJPT_FxFx: "Zj_ll"
   ZJetsToNuNu_NJPT_FxFx__DiJet_ll: "Zj_ll"
   ZJetsToNuNu_NJPT_FxFx__DiJet_cx: "Zj_cj"
