--- a/params/shapemaker_vhcc_run3/Znn.yaml
+++ b/params/shapemaker_vhcc_run3/Znn.yaml
@@ -36,7 +36,7 @@ sample_to_process_map:
   ZH_Hto2C_Zto2Nu: "ZH_hcc"
   ZH_Hto2B_Zto2Nu: "ZH_hbb"
   TTTo2L2Nu: "TT_2L"
-  TTToSemiLeptonic: "TT_1L"
+  TTToSemiLeptonic: "TT"
   TTToHadrons: "TT_Had"
   ZJetsToNuNu_NJPT_FxFx: "Zj_ll"
   ZJetsToNuNu_NJPT_FxFx__DiJet_ll: "Zj_ll"
