New era-channel conditioned GNN; dump GNN arrays by default; updates to samples

--- a/params/shapemaker_vhcc_run3/Zll.yaml
+++ b/params/shapemaker_vhcc_run3/Zll.yaml
@@ -54,13 +54,13 @@ sample_to_process_map:
   DATA_DoubleMuon: "data_obs"
   ZH_Hto2C_Zto2L: "ZH_hcc"
   ZH_Hto2B_Zto2L: "ZH_hbb"
-  ggZH_Hto2C_Zto2L: "ggZH_hcc"
-  ggZH_Hto2B_Zto2L: "ggZH_hbb"
+  ggZH_Hto2C_Zto2L: "ZH_hcc"
+  ggZH_Hto2B_Zto2L: "ZH_hbb"
   TTTo2L2Nu: "TT"
-  DYJetsToLL_FxFx: "Zj_ll"
   DYJetsToLL_FxFx__DiJet_ll: "Zj_ll"
   DYJetsToLL_FxFx__DiJet_cx: "Zj_cj"
   DYJetsToLL_FxFx__DiJet_bx: "Zj_bj"
+  SingleTop: "ST"
   WW: "WW"
   WZ: "WZ"
   ZZ: "ZZ"
