--- a/params/trainings.yaml
+++ b/params/trainings.yaml
@@ -172,6 +172,9 @@ Models:
       '2023_postBPix':
           model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
   'GNN':
+    'Global':
+      model_file: '${config_dir:}/../MVA/GNN_models/Global/gnn.pt'
+      params: '${config_dir:}/../MVA/GNN_models/Global/modelparams.pkl'
     '2L':
       '2022_preEE':
         model_file: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE/gnn.pt'
