--- a/params/shapemaker_vhcc_run3/Zll.yaml
+++ b/params/shapemaker_vhcc_run3/Zll.yaml
@@ -2,7 +2,7 @@
 input:
   channel: "2L"
   eras: ["2022_preEE"]
-  variation: "nominal"
+  variations: ["nominal", "pileupUp", "pileupDown"]
 
 output:
   shapes_file_name: "vhcc_shapes"
@@ -17,69 +17,69 @@ config:
 categories:
   SR_ll_2J_cJ:
     observable: "GNN"
-    mata_name: "Zll_SR"
+    new_name: "Zll_SR"
   SR_mm_2J_cJ_loZPT:
     observable: "GNN"
-    mata_name: "Zmm_SR_loZPT"
+    new_name: "Zmm_SR_loZPT"
   SR_ee_2J_cJ_loZPT:
     observable: "GNN"
-    mata_name: "Zee_SR_loZPT"
+    new_name: "Zee_SR_loZPT"
   SR_mm_2J_cJ_hiZPT:
     observable: "GNN"
-    mata_name: "Zmm_SR_hiZPT"
+    new_name: "Zmm_SR_hiZPT"
   SR_ee_2J_cJ_hiZPT:
     observable: "GNN"
-    mata_name: "Zee_SR_hiZPT"
+    new_name: "Zee_SR_hiZPT"
     
   CR_mm_2J_HF_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_HF_loZPT"
+    new_name: "Zmm_CR_HF_loZPT"
   CR_mm_2J_LF_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_LF_loZPT"
+    new_name: "Zmm_CR_LF_loZPT"
   CR_mm_2J_CC_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_CC_loZPT"
+    new_name: "Zmm_CR_CC_loZPT"
   CR_mm_4J_TT_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_TT_loZPT"
+    new_name: "Zmm_CR_TT_loZPT"
   CR_ee_2J_HF_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_HF_loZPT"
+    new_name: "Zee_CR_HF_loZPT"
   CR_ee_2J_LF_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_LF_loZPT"
+    new_name: "Zee_CR_LF_loZPT"
   CR_ee_2J_CC_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_CC_loZPT"
+    new_name: "Zee_CR_CC_loZPT"
   CR_ee_4J_TT_loZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_TT_loZPT"
+    new_name: "Zee_CR_TT_loZPT"
     
   CR_mm_2J_HF_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_HF_hiZPT"
+    new_name: "Zmm_CR_HF_hiZPT"
   CR_mm_2J_LF_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_LF_hiZPT"
+    new_name: "Zmm_CR_LF_hiZPT"
   CR_mm_2J_CC_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_CC_hiZPT"
+    new_name: "Zmm_CR_CC_hiZPT"
   CR_mm_4J_TT_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zmm_CR_TT_hiZPT"
+    new_name: "Zmm_CR_TT_hiZPT"
   CR_ee_2J_HF_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_HF_hiZPT"
+    new_name: "Zee_CR_HF_hiZPT"
   CR_ee_2J_LF_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_LF_hiZPT"
+    new_name: "Zee_CR_LF_hiZPT"
   CR_ee_2J_CC_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_CC_hiZPT"
+    new_name: "Zee_CR_CC_hiZPT"
   CR_ee_4J_TT_hiZPT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Zee_CR_TT_hiZPT"
+    new_name: "Zee_CR_TT_hiZPT"
 
 sample_to_process_map:
   DATA_EGamma: "data_obs"
