--- a/params/shapemaker_vhcc_run3/Znn.yaml
+++ b/params/shapemaker_vhcc_run3/Znn.yaml
@@ -1,8 +1,7 @@
-
 input:
   channel: "0L"
   eras: ["2022_preEE"]
-  variation: "nominal"
+  variation: ["nominal","pileupUp","pileupDown"]
 
 output:
   shapes_file_name: "vhcc_shapes"
@@ -17,19 +16,19 @@ config:
 categories:
   SR_Znn_2J_cJ:
     observable: "GNN"
-    mata_name: "Znn_SR"
+    new_name: "Znn_SR"
   CR_Znn_2J_HF:
     observable: "dijet_CvsL_j1"
-    mata_name: "Znn_CR_HF"
+    new_name: "Znn_CR_HF"
   CR_Znn_2J_LF:
     observable: "dijet_CvsL_j1"
-    mata_name: "Znn_CR_LF"
+    new_name: "Znn_CR_LF"
   CR_Znn_2J_CC:
     observable: "dijet_CvsL_j1"
-    mata_name: "Znn_CR_CC"
+    new_name: "Znn_CR_CC"
   CR_Znn_4J_TT:
     observable: "dijet_CvsL_j1"
-    mata_name: "Znn_CR_TT"
+    new_name: "Znn_CR_TT"
 
 sample_to_process_map:
   DATA_MET: "data_obs"
