Increase bins in BDT/DNN/GNN to 1000; change shape variable in CRs  (#33)
* Develop shape maker

* Increase bins in BDT/DNN/GNN, minor updates

* split 2L chanel in high ZPt and low ZPt categories

* Add variations to the shape maker

--- a/params/plotting.yaml
+++ b/params/plotting.yaml
@@ -12,8 +12,6 @@ plotting_style:
       - ZH_Hto2C_Zto2L
       - ggZH_Hto2C_Zto2L
       - WH_Hto2C_WtoLNu
-      - WminusH_Hto2C_WtoLNu
-      - WplusH_Hto2C_WtoLNu
       - ZH_Hto2C_Zto2Nu
       - ggZH_Hto2C_Zto2Nu
     Hbb:
@@ -113,13 +111,17 @@ plotting_style:
     DYJetsToLL_FxFx__DiJet_incl:  "#ADFF2F"
 
   blind_hists:
-    categories: ['SR_mm_2J_cJ','SR_ee_2J_cJ','SR_ll_2J_cJ','SR_ll_2J_cJ_loPT','SR_ll_2J_cJ_hiPT','SR_Wmn_2J_cJ','SR_Wen_2J_cJ','SR_Wln_2J_cJ',"SR_Znn_2J_cJ"]
+    categories: ['SR_mm_2J_cJ','SR_ee_2J_cJ','SR_ll_2J_cJ','SR_mm_2J_cJ_loZPT','SR_mm_2J_cJ_hiZPT','SR_ee_2J_cJ_loZPT','SR_ee_2J_cJ_hiZPT','SR_ll_2J_cJ_loZPT','SR_ll_2J_cJ_hiZPT','SR_Wmn_2J_cJ','SR_Wen_2J_cJ','SR_Wln_2J_cJ',"SR_Znn_2J_cJ"]
+    
     histograms:
       dijet_m: [90, 150]
       dijet_csort_m: [90, 150]
       BDT: [0.7, 1]
       DNN: [0.7, 1]
       GNN: [0.7, 1]
+      BDT_coarse: [0.7, 1]
+      DNN_coarse: [0.7, 1]
+      GNN_coarse: [0.7, 1]
 
   print_info:
     category: True
