--- a/params/shapemaker_vhcc_run3/Znn.yaml
+++ b/params/shapemaker_vhcc_run3/Znn.yaml
@@ -35,13 +35,14 @@ sample_to_process_map:
   DATA_MET: "data_obs"
   ZH_Hto2C_Zto2Nu: "ZH_hcc"
   ZH_Hto2B_Zto2Nu: "ZH_hbb"
+  ggZH_Hto2C_Zto2Nu: "ZH_hcc"
+  ggZH_Hto2B_Zto2Nu: "ZH_hbb"
   TTTo2L2Nu: "TT"
   TTToHadrons: "TT"
-  ZJetsToNuNu_NJPT_FxFx: "Zj_ll"
+  SingleTop: "ST"
   ZJetsToNuNu_NJPT_FxFx__DiJet_ll: "Zj_ll"
   ZJetsToNuNu_NJPT_FxFx__DiJet_cx: "Zj_cj"
   ZJetsToNuNu_NJPT_FxFx__DiJet_bx: "Zj_bj"
-  WJetsToLNu_FxFx: "Wj_ll"
   WJetsToLNu_FxFx__DiJet_ll: "Wj_ll"
   WJetsToLNu_FxFx__DiJet_cx: "Wj_cj"
   WJetsToLNu_FxFx__DiJet_bx: "Wj_bj"
