--- a/params/skip_plot_opt_vhbb_run3/custom_plot_options_vhbb_WLNu.yaml
+++ b/params/skip_plot_opt_vhbb_run3/custom_plot_options_vhbb_WLNu.yaml
@@ -1,51 +1,30 @@
 plotting_style:
   samples_groups:
-    # Top:
-    #   - TTToSemiLeptonic
-    #   - TTTo2L2Nu
-    #   - TTToHadrons
+    Top:
+      - TTToSemiLeptonic
+      - TTTo2L2Nu
+      - TTToHadrons
+      - SingleTop
+      
     VV:
       - WW
       - WZ
       - ZZ
-      
-    W2B:
-      - WminusH_Hto2B_WtoLNu
-      - WplusH_Hto2B_WtoLNu
-      
-    W2C:
-      - WminusH_Hto2C_WtoLNu
-      - WplusH_Hto2C_WtoLNu
         
   exclude_samples:
 
-    - DATA_MuonEG
+    # - DATA_MuonEG
     # - DATA_DoubleMuon
-    # - DYJetsToLL_PT_MLM
-    # - DYJetsToLL_PT_MLM__DiJet_bx
-    # - DYJetsToLL_PT_MLM__DiJet_cx
-    # - DYJetsToLL_PT_MLM__DiJet_ll
-    # - DYJetsToLL_PT_MLM__DiJet_incl
-    # - WJetsToLNu_FxFx
     - WJetsToLNu_FxFx__DiJet_incl
-    # - DYJetsToLL_M-50_MLM
-    # - DYJetsToLL_M-50_MLM__DiJet_incl
     
   rescale_samples:
     WJetsToLNu_FxFx: 1.00
 
   signal_samples:
-    WplusH_Hto2B_WtoLNu: 50
-    WminusH_Hto2B_WtoLNu: 50
-    # WplusH_Hto2C_WtoLNu: 50
-    # WminusH_Hto2C_WtoLNu: 50
-    
+    ZH_Hto2B_Zto2L: 50
+    # ZH_Hto2C_Zto2L: 50
+      
   labels_mc:
-    
-    # DYJetsToLL_PT_MLM__DiJet_bx: DY4J+bj
-    # DYJetsToLL_PT_MLM__DiJet_cx: DY4J+cj
-    # DYJetsToLL_PT_MLM__DiJet_ll: DY4J+lj
-    # DYJetsToLL_PT_MLM__DiJet_incl: DY4J-Inc
     
     WJetsToLNu_FxFx__DiJet_bx: WJ+bj
     WJetsToLNu_FxFx__DiJet_cx: WJ+cj
@@ -56,40 +35,27 @@ plotting_style:
     TTToSemiLeptonic: TT1L
     TTToHadrons: TTHad
     
-    WplusH_Hto2B_WtoLNu: "$W+H\\to bb$"
-    WminusH_Hto2B_WtoLNu: "$W-H\\to bb$"
-    WplusH_Hto2C_WtoLNu: "$W+H\\to cc$"
-    WminusH_Hto2C_WtoLNu: "$W-H\\to cc$"
+    ZH_Hto2C_Zto2L: "$ZH\\to cc$"
+    ZH_Hto2B_Zto2L: "$ZH\\to bb$"
     
-   
   colors_mc:
     TTTo2L2Nu: "#02baf7"
     TTToSemiLeptonic: "#1ca8d6"
     TTToHadrons: "#438aa1"
     
-    # DYJetsToLL_MLM: "#ADFF2F"
-    # WJetsToLNu_FxFx: "#ADFF2F"
-    # DYJetsToLL_MiNNLO: "#ADFF2F"
-    # WJetsToLNu_FxFx: "#F6D608"
-    # ZJetsToNuNu_FxFx: "#ADFF2F"
-    # VV: "#FFA07A"
-    # QCD: "#D3D3D3"
+    ZH_Hto2B_Zto2L: "#ff0000"
+    ZH_Hto2C_Zto2L: "#0088ff"
 
-    WJetsToLNu_FxFx__DiJet_bx:  "#22e02e"
-    WJetsToLNu_FxFx__DiJet_cx:  "#03910c"
-    WJetsToLNu_FxFx__DiJet_ll:  "#8fff96"
-    
-    # DYJetsToLL_M-50_MLM__DiJet_bx:  "#f5f768"
-    # DYJetsToLL_M-50_MLM__DiJet_cx:  "#e3e146"
-    # DYJetsToLL_M-50_MLM__DiJet_ll:  "#adab10"
-    # DYJetsToLL_M-50_MLM__DiJet_incl: "#196f3d"
+    WJetsToLNu_FxFx__DiJet_bx:  "#54f06e"
+    WJetsToLNu_FxFx__DiJet_cx:  "#13b02d"
+    WJetsToLNu_FxFx__DiJet_ll:  "#026613"
 
   blind_hists:
-    categories: [SR_LNu2B]
+    categories: [SR_LNu2B_ln]
     histograms:
       dibjet_m: [90, 150]
-      BDT: [0.7, 1]
-      DNN: [0.7, 1]
+      BDT_coarse: [0.7, 1]
+      DNN_coarse: [0.7, 1]
 
   opts_sig:
     histtype: "step"
