Make ggZH/ZH separate

--- a/params/shapemaker_vhcc_run3/Znn.yaml
+++ b/params/shapemaker_vhcc_run3/Znn.yaml
@@ -34,8 +34,8 @@ sample_to_process_map:
   DATA_MET: "data_obs"
   ZH_Hto2C_Zto2Nu: "ZH_hcc"
   ZH_Hto2B_Zto2Nu: "ZH_hbb"
-  ggZH_Hto2C_Zto2Nu: "ZH_hcc"
-  ggZH_Hto2B_Zto2Nu: "ZH_hbb"
+  ggZH_Hto2C_Zto2Nu: "ggZH_hcc"
+  ggZH_Hto2B_Zto2Nu: "ggZH_hbb"
   TTTo2L2Nu: "TT_2L"
   TTToSemiLeptonic: "TT"
   TTToHadrons: "TT_Had"
