--- a/params/shapemaker_vhcc_run3/Zll.yaml
+++ b/params/shapemaker_vhcc_run3/Zll.yaml
@@ -86,8 +86,8 @@ sample_to_process_map:
   DATA_DoubleMuon: "data_obs"
   ZH_Hto2C_Zto2L: "ZH_hcc"
   ZH_Hto2B_Zto2L: "ZH_hbb"
-  ggZH_Hto2C_Zto2L: "ZH_hcc"
-  ggZH_Hto2B_Zto2L: "ZH_hbb"
+  ggZH_Hto2C_Zto2L: "ggZH_hcc"
+  ggZH_Hto2B_Zto2L: "ggZH_hbb"
   TTTo2L2Nu: "TT"
   DYJetsToLL_FxFx__DiJet_ll: "Zj_ll"
   DYJetsToLL_FxFx__DiJet_cx: "Zj_cj"
