--- a/params/shapemaker_vhcc_run3/Zll.yaml
+++ b/params/shapemaker_vhcc_run3/Zll.yaml
@@ -89,10 +89,10 @@ sample_to_process_map:
   ggZH_Hto2C_Zto2L: "ggZH_hcc"
   ggZH_Hto2B_Zto2L: "ggZH_hbb"
   TTTo2L2Nu: "TT"
-  DYJetsToLL_FxFx: "Zj_ll"
   DYJetsToLL_FxFx__DiJet_ll: "Zj_ll"
   DYJetsToLL_FxFx__DiJet_cx: "Zj_cj"
   DYJetsToLL_FxFx__DiJet_bx: "Zj_bj"
+  SingleTop: "ST"
   WW: "WW"
   WZ: "WZ"
   ZZ: "ZZ"
