--- a/params/shapemaker_vhcc_run3/Wln.yaml
+++ b/params/shapemaker_vhcc_run3/Wln.yaml
@@ -57,10 +57,13 @@ sample_to_process_map:
   TTTo2L2Nu: "TT_2L"
   TTToSemiLeptonic: "TT"
   TTToHadrons: "TT_Had"
-  WJetsToLNu_FxFx: "Wj_ll"
+  SingleTop: "ST"
   WJetsToLNu_FxFx__DiJet_ll: "Wj_ll"
   WJetsToLNu_FxFx__DiJet_cx: "Wj_cj"
   WJetsToLNu_FxFx__DiJet_bx: "Wj_bj"
+  DYJetsToLL_FxFx__DiJet_ll: "Zj_ll"
+  DYJetsToLL_FxFx__DiJet_cx: "Zj_cj"
+  DYJetsToLL_FxFx__DiJet_bx: "Zj_bj"
   WW: "WW"
   WZ: "WZ"
   ZZ: "ZZ"
