Adapt datacard plotting script to cc

--- a/params/shapemaker_vhcc_run3/Wln.yaml
+++ b/params/shapemaker_vhcc_run3/Wln.yaml
@@ -87,3 +87,15 @@ bin_merging:
     target_significance_loss: 0.005
     minimum_signal: 0
     epsilon: 0.05
+
+plotting:
+  enable: True
+  signal_scaling: 50
+  signal_scaling_cc: 1000
+  blinding:
+    SR_Wln_2J_cJ:
+      GNN: [700, 1000]
+    SR_Wen_2J_cJ:
+      GNN: [700, 1000]
+    SR_Wmn_2J_cJ:
+      GNN: [700, 1000]
