--- a/params/shapemaker_vhcc_run3/Znn.yaml
+++ b/params/shapemaker_vhcc_run3/Znn.yaml
@@ -57,3 +57,11 @@ bin_merging:
     target_significance_loss: 0.005
     minimum_signal: 0
     epsilon: 0.05
+
+plotting:
+  enable: True
+  signal_scaling: 50
+  signal_scaling_cc: 1000
+  blinding:
+    SR_Znn_2J_cJ:
+      GNN: [700, 1000]
